src/parser/tests/parse_errors/snapshots/rusty__parser__tests__parse_errors__parse_error_statements_tests__while_with_missing_do.snap
---
source: src/parser/tests/parse_errors/parse_error_statements_tests.rs
expression: diagnostics
---
error[E006]: Missing expected Token `DO`
  ┌─ <internal>:3:17
  │
3 │                 y := x;
  │                 ^ Missing expected Token `DO`
